--- a/index.html
+++ b/index.html
@@ -158,6 +158,20 @@
         .three-grid p{
             color: #3a4152;
         }
+
+        
+        /* Media Queries */
+        @media only screen and (max-width: 600px) {
+            .four img {
+                width: 100%;
+            }
+        }
+
+        @media only screen and (max-width: 480px) {
+            .three-grid {
+                grid-template-columns: 1fr;
+            }
+        }
     </style>
 </head>
 <body>
