--- a/index.html
+++ b/index.html
@@ -1,146 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WallpaperCave WEBSITE</title>
-    <link rel="shortcut icon" href="media/01.webp" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="shortcut icon" href="media/logo.jpg" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="nav">
-        <div class="logo">
-            <h1>Wallpaper Cave</h1>
-            <input type="text" placeholder="Search wallpapers.." title="please fill out this field">
-        </div>
-        <div class="nav-links">
-            <a href="">LATEST</a>
-            <a href="">CATEGORIES</a>
-            <a href="">UPLOAD</a>
-            <a href="">SIGN IN</a>
-        </div>
-        <div class="create">
-            <button>Create Account</button>
-        </div>
+      <div class="logo">
+        <h1>Wallpaper Cave</h1>
+        <input
+          type="text"
+          placeholder="Search wallpapers.."
+          title="please fill out this field"
+        />
+      </div>
+      <div class="nav-links">
+        <a href="">LATEST</a>
+        <a href="">CATEGORIES</a>
+        <a href="">UPLOAD</a>
+        <a href="">SIGN IN</a>
+      </div>
+      <div class="create">
+        <button>Create Account</button>
+      </div>
     </div>
     <div class="fullscreen">
-        <h1>Welcome to WallpaperCave!</h1>
-        <input type="text" placeholder="Search Wallpapers..">
-        <div class="space">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-x-twitter"></i>
-        </div>
+      <h1>Welcome to WallpaperCave!</h1>
+      <input type="text" placeholder="Search Wallpapers.." />
+      <div class="space">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-x-twitter"></i>
+      </div>
     </div>
     <h1 class="line">TRENDING THIS WEEK</h1>
     <div class="space-contain">
-        <button>Christmas</button>
-        <button>Naruto</button>
-        <button>Miles Morales</button>
-        <button>One Piece</button>
-        <button>4k</button>
-        <button>Cyberpunk</button>
-        <button>Goku</button>
-        <button>Demon Slayer</button>
-        <button>Black</button>
-        <button>Aesthethic</button>
-        <button>Autumn</button>
+      <button>Christmas</button>
+      <button>Naruto</button>
+      <button>Miles Morales</button>
+      <button>One Piece</button>
+      <button>4k</button>
+      <button>Cyberpunk</button>
+      <button>Goku</button>
+      <button>Demon Slayer</button>
+      <button>Black</button>
+      <button>Aesthethic</button>
+      <button>Autumn</button>
     </div>
-    <br>
+    <br />
     <h1 class="line">FEATURED DESKTOP WALLPAPERS</h1>
     <div class="four">
-        <img src="media/1.webp" alt="">
-        <img src="media/2.webp" alt="">
-        <img src="media/3.jpg" alt="">
-        <img src="media/4.jpg" alt="">
+      <img src="media/1.webp" alt="" />
+      <img src="media/2.webp" alt="" />
+      <img src="media/3.jpg" alt="" />
+      <img src="media/4.jpg" alt="" />
     </div>
     <div class="four">
-        <img src="media/5.webp" alt="">
-        <img src="media/6.webp" alt="">
-        <img src="media/7.webp" alt="">
-        <img src="media/8.webp" alt="">
+      <img src="media/5.webp" alt="" />
+      <img src="media/6.webp" alt="" />
+      <img src="media/7.webp" alt="" />
+      <img src="media/8.webp" alt="" />
     </div>
     <h1 class="line">FEATURED ALBUMS</h1>
 
     <div class="three-grid">
-        <div class="card">
-            <img src="media/10.webp" alt="">
-            <div class="content">
-                <h2>Merry Christmas & Happy New Year</h2>
-                <p>48 wallpapers</p>
-            </div>
+      <div class="card">
+        <img src="media/10.webp" alt="" />
+        <div class="content">
+          <h2>Merry Christmas & Happy New Year</h2>
+          <p>48 wallpapers</p>
         </div>
-        <div class="card">
-            <img src="media/11.webp" alt="">
-            <div class="content">
-                <h2>Christmas Aesthethic</h2>
-                <p>125 wallpapers</p>
-            </div>
+      </div>
+      <div class="card">
+        <img src="media/11.webp" alt="" />
+        <div class="content">
+          <h2>Christmas Aesthethic</h2>
+          <p>125 wallpapers</p>
         </div>
-        <div class="card">
-            <img src="media/13.webp" alt="">
-            <div class="content">
-                <h2>Preppy Xmas</h2>
-                <p>49 wallpapers</p>
-            </div>
+      </div>
+      <div class="card">
+        <img src="media/13.webp" alt="" />
+        <div class="content">
+          <h2>Preppy Xmas</h2>
+          <p>49 wallpapers</p>
         </div>
-        <div class="card">
-            <img src="media/14.webp" alt="">
-            <div class="content">
-                <h2>Honkai Star Rail</h2>
-                <p>64 wallpapers</p>
-            </div>
+      </div>
+      <div class="card">
+        <img src="media/14.webp" alt="" />
+        <div class="content">
+          <h2>Honkai Star Rail</h2>
+          <p>64 wallpapers</p>
         </div>
-        <div class="card">
-            <img src="media/15.webp" alt="">
-            <div class="content">
-                <h2>Oshi No Ko HD</h2>
-                <p>64 wallpapers</p>
-            </div>
+      </div>
+      <div class="card">
+        <img src="media/15.webp" alt="" />
+        <div class="content">
+          <h2>Oshi No Ko HD</h2>
+          <p>64 wallpapers</p>
         </div>
-        <div class="card">
-            <img src="media/16.webp" alt="">
-            <div class="content">
-                <h2>God of War Ragnarok</h2>
-                <p>22 wallpapers</p>
-            </div>
+      </div>
+      <div class="card">
+        <img src="media/16.webp" alt="" />
+        <div class="content">
+          <h2>God of War Ragnarok</h2>
+          <p>22 wallpapers</p>
         </div>
+      </div>
     </div>
 
     <h1 class="line">FEATURED USERS</h1>
     <div class="mother-card">
-        <div class="baby-card">
-            <img src="media/01.webp" alt="">
-            <h3>pr3ppymed1na</h3>
-            <p>40 wallpapers</p>
-        </div>
-        <div class="baby-card">
-            <img src="media/02.webp" alt="">
-            <h3>Northgx</h3>
-            <p>210 wallpapers</p>
-        </div>
-        <div class="baby-card">
-            <img src="media/1-1.webp" alt="">
-            <h3>graphixperience</h3>
-            <p>2,587 wallpapers</p>
-        </div>
-        <div class="baby-card">
-            <img src="media/1-2.webp" alt="">
-            <h3>blairthsadone</h3>
-            <p>1,820 wallpapers</p>
-        </div>
-        <div class="baby-card">
-            <img src="media/1-3.webp" alt="">
-            <h3>shawtysoaesthethic</h3>
-            <p>113 wallpapers</p>
-        </div>
-        <div class="baby-card">
-            <img src="media/1-4.webp" alt="">
-            <h3>grllilikeapearl</h3>
-            <p>868 wallpapers</p>
-        </div>
+      <div class="baby-card">
+        <img src="media/01.webp" alt="" />
+        <h3>pr3ppymed1na</h3>
+        <p>40 wallpapers</p>
+      </div>
+      <div class="baby-card">
+        <img src="media/02.webp" alt="" />
+        <h3>Northgx</h3>
+        <p>210 wallpapers</p>
+      </div>
+      <div class="baby-card">
+        <img src="media/1-1.webp" alt="" />
+        <h3>graphixperience</h3>
+        <p>2,587 wallpapers</p>
+      </div>
+      <div class="baby-card">
+        <img src="media/1-2.webp" alt="" />
+        <h3>blairthsadone</h3>
+        <p>1,820 wallpapers</p>
+      </div>
+      <div class="baby-card">
+        <img src="media/1-3.webp" alt="" />
+        <h3>shawtysoaesthethic</h3>
+        <p>113 wallpapers</p>
+      </div>
+      <div class="baby-card">
+        <img src="media/1-4.webp" alt="" />
+        <h3>grllilikeapearl</h3>
+        <p>868 wallpapers</p>
+      </div>
     </div>
-    <script src="media/https://kit.fontawesome.com/a63b501055.js" crossorigin="anonymous"></script>
-
-</body>
+    <script
+      src="media/https://kit.fontawesome.com/a63b501055.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
