--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WallpaperCave</title>
-    <link rel="shortcut icon" href="media/logo.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="media/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
