--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         />
       </div>
       <div class="nav-links">
-        <a href="">LATEST</a>
-        <a href="">CATEGORIES</a>
-        <a href="">UPLOAD</a>
-        <a href="">SIGN IN</a>
-      </div>
+        <a href="">latest</a>
+        <a href="">categories</a>
+        <a href="">upload</a>
+        <a href="">sign in</a>
+    </div>
+    
       <div class="create">
         <button>Create Account</button>
       </div>
