- Changing the wallpapercave website logo - Adding an alternative name in the image - Changing the className of the website html - Delete the json file from vscode

--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
     <div class="nav">
       <div class="logo">
         <h1>Wallpaper Cave</h1>
-
-        <input
-          type="text"
-          placeholder="Search wallpapers.."
-          title="please fill out this field"
-        />
       </div>
       <div class="nav-links">
         <a href="">latest</a>
@@ -32,14 +26,11 @@
     <div class="fullscreen">
       <h1>Welcome to WallpaperCave!</h1>
       <input type="text" placeholder="Search Wallpapers.." />
-      <div class="space">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-x-twitter"></i>
-      </div>
+
     </div>
-    <h1 class="line">TRENDING THIS WEEK</h1>
-    <div class="space-contain">
+    <br>
+    <h1 class="trendings">TRENDING THIS WEEK</h1>
+    <div class="topics">
       <button>Christmas</button>
       <button>Naruto</button>
       <button>Miles Morales</button>
@@ -53,59 +44,59 @@
       <button>Autumn</button>
     </div>
     <br />
-    <h1 class="line">FEATURED DESKTOP WALLPAPERS</h1>
-    <div class="four">
-      <img src="media/1.webp" alt="" />
-      <img src="media/2.webp" alt="" />
-      <img src="media/3.jpg" alt="" />
-      <img src="media/4.jpg" alt="" />
+    <h1 class="features">FEATURED DESKTOP WALLPAPERS</h1>
+    <div class="features-wallpapers">
+      <img src="media/1.webp" alt="galaxy" />
+      <img src="media/2.webp" alt="double sword" />
+      <img src="media/3.jpg" alt="rainy city inside car" />
+      <img src="media/4.jpg" alt="call of duty modern warfare" />
     </div>
-    <div class="four">
-      <img src="media/5.webp" alt="" />
-      <img src="media/6.webp" alt="" />
-      <img src="media/7.webp" alt="" />
-      <img src="media/8.webp" alt="" />
+    <div class="features-wallpapers">
+      <img src="media/5.webp" alt="eren's back" />
+      <img src="media/6.webp" alt="cute dog" />
+      <img src="media/7.webp" alt="son goku" />
+      <img src="media/8.webp" alt="dj party" />
     </div>
-    <h1 class="line">FEATURED ALBUMS</h1>
+    <h1 class="features">FEATURED ALBUMS</h1>
 
     <div class="three-grid">
       <div class="card">
-        <img src="media/10.webp" alt="" />
+        <img src="media/10.webp" alt="merry xmas wallpapers content" />
         <div class="content">
           <h2>Merry Christmas & Happy New Year</h2>
           <p>48 wallpapers</p>
         </div>
       </div>
       <div class="card">
-        <img src="media/11.webp" alt="" />
+        <img src="media/11.webp" alt="chirstmas Aesthethic" />
         <div class="content">
           <h2>Christmas Aesthethic</h2>
           <p>125 wallpapers</p>
         </div>
       </div>
       <div class="card">
-        <img src="media/13.webp" alt="" />
+        <img src="media/13.webp" alt="preppy chirstmas" />
         <div class="content">
           <h2>Preppy Xmas</h2>
           <p>49 wallpapers</p>
         </div>
       </div>
       <div class="card">
-        <img src="media/14.webp" alt="" />
+        <img src="media/14.webp" alt="honkai star rail" />
         <div class="content">
           <h2>Honkai Star Rail</h2>
           <p>64 wallpapers</p>
         </div>
       </div>
       <div class="card">
-        <img src="media/15.webp" alt="" />
+        <img src="media/15.webp" alt="oshi no ko" />
         <div class="content">
           <h2>Oshi No Ko HD</h2>
           <p>64 wallpapers</p>
         </div>
       </div>
       <div class="card">
-        <img src="media/16.webp" alt="" />
+        <img src="media/16.webp" alt="god of war ragnarok" />
         <div class="content">
           <h2>God of War Ragnarok</h2>
           <p>22 wallpapers</p>
@@ -113,68 +104,38 @@
       </div>
     </div>
 
-    <h1 class="line">FEATURED USERS</h1>
-    <div class="mother-card">
-      <div class="baby-card">
-        <img src="media/01.webp" alt="" />
+    <h1 class="features">FEATURED USERS</h1>
+    <div class="card-container">
+      <div class="card-users">
+        <img src="media/01.webp" alt="pr3ppymed1na pfp" />
         <h3>pr3ppymed1na</h3>
         <p>40 wallpapers</p>
       </div>
-      <div class="baby-card">
-        <img src="media/02.webp" alt="" />
+      <div class="card-users">
+        <img src="media/02.webp" alt="Northgx pfp" />
         <h3>Northgx</h3>
         <p>210 wallpapers</p>
       </div>
-      <div class="baby-card">
-        <img src="media/1-1.webp" alt="" />
+      <div class="card-users">
+        <img src="media/1-1.webp" alt="graphixperience pfp" />
         <h3>graphixperience</h3>
         <p>2,587 wallpapers</p>
       </div>
-      <div class="baby-card">
-        <img src="media/1-2.webp" alt="" />
+      <div class="card-users">
+        <img src="media/1-2.webp" alt="blairthsadone pfp" />
         <h3>blairthsadone</h3>
         <p>1,820 wallpapers</p>
       </div>
-      <div class="baby-card">
-        <img src="media/1-3.webp" alt="" />
+      <div class="card-users">
+        <img src="media/1-3.webp" alt="shawtysoaesthethic pfp" />
         <h3>shawtysoaesthethic</h3>
         <p>113 wallpapers</p>
       </div>
-      <div class="baby-card">
-        <img src="media/1-4.webp" alt="" />
+      <div class="card-users">
+        <img src="media/1-4.webp" alt="grllilikeapearl pfp" />
         <h3>grllilikeapearl</h3>
         <p>868 wallpapers</p>
       </div>
     </div>
   </body>
 </html>
-<script>
-  let create = document.querySelector(".create");
-  let div = document.createElement("div");
-  div.classList.add("menu");
-  create.after(div);
-  div.setAttribute("id", "menu");
-  let menu = document.getElementById("menu");
-
-  menu.innerHTML = `       <img src="media/menu.jpg" alt="menu" onclick="send()" />`;
-  let container = document.createElement("div");
-  value = 0;
-  function send() {
-    if (value == 0) {
-      value++;
-
-      container.innerHTML = `    <ul>
-      <li><a href="">Latest</a></li>
-      <li><a href="">Category</a></li>
-      <li><a href="">Upload</a></li>
-      <li><a href="">Sign in</a></li>
-    </ul>`;
-      menu.after(container);
-      container.classList.add("container");
-    } else {
-      container.removeAttribute("class", "container");
-      container.innerHTML = "";
-      value = 0;
-    }
-  }
-</script>
